# latren

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
include/latren/: debugmacros.h  game.h  gamewindow.h  input.h  latren.h  stage.h  systems.h
include/latren/audio/: alhandle.h  audiobuffer.h  audioplayer.h  audiosource.h
include/latren/audio/component/: audiosourcecomponent.h
include/latren/defines/: mathdefines.h  opengl.h  stb.h  wchar.h  win32.h  wndmetrics.h
include/latren/ec/: component.h  entity.h  entitymanager.h  forward.h  memmgr.h  mempool.h  serializable.h  serialization.h  transform.h  wrapper.h
include/latren/entity/: component.h  entity.h  entitymanager.h  forward.h  memmgr.h  mempool.h  serializable.h  transform.h
include/latren/event/: eventhandler.h
include/latren/graphics/: camera.h  cubemap.h  material.h  mesh.h  model.h  object.h  postprocessing.h  renderer.h  rendermode.h  renderpass.h  shader.h  shaders.h  shape.h  sprite.h  texture.h  textureatlas.h  viewport.h
include/latren/graphics/component/: billboard.h  light.h  meshrenderer.h  renderable.h
include/latren/io/: configs.h  genericdeserializers.h  paths.h  resourcemanager.h  resourcepath.h  resourcetype.h  serializablestruct.h  serializationinterface.h  serializer.h  serializetypes.h
include/latren/io/files/: blueprints.h  cfg.h  materials.h  objects.h  stage.h
include/latren/physics/: debugdrawer.h  physics.h  raii.h
include/latren/physics/component/: rigidbody.h
include/latren/terrain/: plane.h
include/latren/threads/: atomic.h
include/latren/ui/: alignment.h  canvas.h  canvaslayout.h  materials.h  text.h
include/latren/ui/component/: buttoncomponent.h  containercomponent.h  imagecomponent.h  interactable.h  listcomponent.h  subcomponent.h  textcomponent.h  textinputcomponent.h  uicomponent.h
include/latren/util/: idfactory.h  logging.h  quaternion.h  templatestr.h
res/.latren/: NOTICE.txt
res/.latren/shaders/: billboard.geom  billboard.vert  blink.frag  framebuffer.vert  line.frag  line.geom  line.vert  lit.frag  lit.vert  normals.frag  normals.geom  normals.vert  skybox.vert  unlit.vert
scripts/: README.md  build.bat  build.sh  copy-resources.bat  copy-resources.sh  run.bat  run.sh
src/: game.cpp  gamewindow.cpp  input.cpp  latren.cpp  registertypes.cpp  stage.cpp  systems.cpp
src/audio/: audiofile.cpp  audioplayer.cpp  audiosource.cpp
src/audio/component/: audiosourcecomponent.cpp
src/ec/: component.cpp  entity.cpp  entitymanager.cpp  memmgr.cpp  serializable.cpp  serialization.cpp  transform.cpp
src/entity/: component.cpp  entity.cpp  entitymanager.cpp  memmgr.cpp  transform.cpp
src/graphics/: camera.cpp  cubemap.cpp  material.cpp  mesh.cpp  model.cpp  postprocessing.cpp  renderer.cpp  shader.cpp  shape.cpp  texture.cpp  textureatlas.cpp
src/graphics/component/: billboard.cpp  light.cpp  meshrenderer.cpp  renderable.cpp
src/io/: paths.cpp  resourcemanager.cpp  resourcepath.cpp  serializablestruct.cpp  serializationinterface.cpp  serializer.cpp  serializetypes.cpp
src/io/files/: blueprints.cpp  cfg.cpp  datafiles.cpp  materials.cpp  objects.cpp  stage.cpp
src/physics/: debugdrawer.cpp  physics.cpp
src/physics/component/: rigidbody.cpp
src/terrain/: plane.cpp
src/ui/: canvas.cpp  canvaslayout.cpp  text.cpp
src/ui/component/: buttoncomponent.cpp  containercomponent.cpp  imagecomponent.cpp  interactable.cpp  listcomponent.cpp  textcomponent.cpp  textinputcomponent.cpp  uicomponent.cpp
src/util/: idfactory.cpp  logger.cpp  stb.cpp
